# XiboScreenUpdater

./: .gitignore  Makefile  README.md  SETUP.md  USAGE.md  config_manager.py  file_processor.py  logging_config.py  main.py  nextcloud_client.py  pyproject.toml  setup.sh  test-setup.sh  test_nextcloud.py  test_xibo.py  xibo_client.py
api/: requests.http
config/: example.yaml
docs/: architecture.md  coding-conventions.md  configuration.md  installation.md  testing.md
nextcloud/: docker-compose.yaml
src/xibo_screen_updater/: __init__.py
src/xibo_screen_updater/core/: __init__.py  application.py  config_manager.py  file_processor.py
src/xibo_screen_updater/providers/: __init__.py  base.py  media_processors.py  nextcloud.py  xibo.py
src/xibo_screen_updater/types/: __init__.py  config.py  file_info.py
tests/integration/: test_application.py  test_nextcloud_provider.py  test_xibo_provider.py
tests/unit/: test_config_manager.py
xibo/: docker-compose.yaml
